--- a/client/package.json
+++ b/client/package.json
@@ -29,6 +29,7 @@
     "i18next-browser-languagedetector": "^8.0.0",
     "i18next-http-backend": "^3.0.1",
     "lint-staged": "^15.2.10",
+    "lucide-react": "^0.552.0",
     "react": "18",
     "react-custom-roulette": "^1.4.1",
     "react-daisyui": "^5.0.5",
