--- a/client/package.json
+++ b/client/package.json
@@ -19,6 +19,8 @@
     ]
   },
   "dependencies": {
+    "@headlessui/react": "^2.2.9",
+    "@heroicons/react": "^2.2.0",
     "@reduxjs/toolkit": "^2.3.0",
     "@tailwindcss/vite": "^4.1.14",
     "aos": "^2.3.4",
